[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/CategoryPanel/Scripts/CategoryButton.gd" type="Script" id=1]

[node name="Button" type="Button"]
margin_right = 285.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_left = 69.0
margin_right = 212.0
margin_bottom = 56.0
mouse_filter = 1
items = [ "Rename", null, 0, false, false, 0, 0, null, "", false, "Scan For Changes", null, 0, false, false, 1, 0, null, "", true, "", null, 0, false, false, 2, 0, null, "", true, "Reimport Category", null, 0, false, false, 3, 0, null, "", false, "Delete", null, 0, false, false, 4, 0, null, "", false ]

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
margin_right = 294.0
margin_bottom = 24.0

[connection signal="gui_input" from="." to="." method="_on_Button_gui_input"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
[connection signal="index_pressed" from="PopupMenu" to="." method="_on_PopupMenu_index_pressed"]
[connection signal="mouse_exited" from="PopupMenu" to="." method="_on_PopupMenu_mouse_exited"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
